--- a/contact.html
+++ b/contact.html
@@ -50,13 +50,12 @@
         <!-- changed label to name, changed input type to name, added placeholder -->
         <div class="form-group">
           <label for="exampleInputEmail1">Name</label>
-          <input type="name" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
-            placeholder="John Smith">
+          <input type="name" class="form-control" id="exampleInputEmail1" placeholder="John Smith">
         </div>
         <!-- changed label to Email, changed input type to email, added placeholder -->
         <div class="form-group">
           <label for="exampleInputPassword1">Email</label>
-          <input type="email" class="form-control" id="exampleInputPassword1" placeholder="example@gmail.com">
+          <input type="email" class="form-control" id="exampleInputPassword1" placeholder="your@email.com">
         </div>
         <!-- changed label to Message, changed rows to 8 -->
         <div class="form-group">
@@ -65,7 +64,6 @@
         </div>
         <!-- changed buton to btn-dark -->
         <button type="submit" class="btn btn-dark" value="send">Submit
-          <a href="mailto:webmaster@example.com"></a>
         </button>
       </form>
     </div>
