changes to contact.html, changed input type to text

--- a/contact.html
+++ b/contact.html
@@ -50,7 +50,7 @@
         <!-- changed label to name, changed input type to name, added placeholder -->
         <div class="form-group">
           <label for="exampleInputEmail1">Name</label>
-          <input type="name" class="form-control" id="exampleInputEmail1" placeholder="John Smith">
+          <input type="text" class="form-control" id="exampleInputEmail1" placeholder="John Smith">
         </div>
         <!-- changed label to Email, changed input type to email, added placeholder -->
         <div class="form-group">
