added screenshots of website and added to read me file

--- a/contact.html
+++ b/contact.html
@@ -43,11 +43,9 @@
     <!-- added h1, hr -->
     <h1>Contact</h1>
     <hr>
-    <div class="container">
+    <div class="container contact">
       <!-- from bootstrap forms, added text area-->
       <form>
-        <!-- <form action="mailto:michellew179@gmail.com" method="post" enctype="text/plain"> -->
-        <!-- changed label to name, changed input type to name, added placeholder -->
         <div class="form-group">
           <label for="exampleInputEmail1">Name</label>
           <input type="text" class="form-control" id="exampleInputEmail1" placeholder="John Smith">
@@ -62,7 +60,7 @@
           <label for="exampleFormControlTextarea1">Message</label>
           <textarea class="form-control" id="exampleFormControlTextarea1" rows="8"></textarea>
         </div>
-        <!-- changed buton to btn-dark -->
+        <!-- changed button to btn-dark -->
         <button type="submit" class="btn btn-dark" value="send">Submit
         </button>
       </form>
@@ -70,6 +68,12 @@
 
 
   </main>
+
+  <footer>
+    <p>
+      Have a great day!
+    </p>
+  </footer>
 
 
 </body>
