--- a/index.html
+++ b/index.html
@@ -51,17 +51,24 @@
             <figure>
               <img class="img" src="assets/wolf.jpg" alt="wolf">
             </figure>
-            <p>Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <p class="wrap">SLorem ipsum dolor sit amet, consectetur adipiscing elit. Ut sem erat, placerat
+              at mauris
+              at, eleifend
+              vehicula odio. Pellentesque ut velit pulvinar, vulputate ligula pretium, facilisis turpis. Vestibulum
+              mattis sagittis imperdiet. Nam pulvinar, augue id pharetra convallis, tortor mauris accumsan nibh, a
+              auctor odio quam eget tortor. Integer non magna risus. Cras vehicula ipsum finibus pharetra vestibulum.
+              Nunc efficitur massa non sodales pharetra. Donec dapibus elementum viverra. Vivamus a velit faucibus,
+              mattis felis at, gravida nisi.</p>
           </div>
         </div>
       </div>
     </section>
   </main>
-  <!-- <footer>
+  <footer>
     <p>
-      Hello
+      Have a great day!
     </p>
-  </footer> -->
+  </footer>
 
 </body>
 
